# jupyter-slurm-provisioner-extension

./: .copier-answers.yml  .gitignore  .prettierignore  1.README.md  1.gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml
jupyter-config/nb-config/: jupyter_slurm_provisioner_extension.json  slurm_provisioner_configurator.json
jupyter-config/server-config/: jupyter_slurm_provisioner_extension.json  slurm_provisioner_configurator.json
jupyter_slurm_provisioner_extension/: __init__.py  __main__.py  handlers.py
src/: handler.ts  icon.ts  index.ts  kernelSelector.tsx  toolbar.tsx  widget.tsx  widgets.tsx
src/__tests__/: jupyter_slurm_provisioner_extension.spec.ts  slurm_provisioner_configurator.spec.ts
style/: base.css
ui-tests/: package.json
ui-tests/tests/: jupyter_slurm_provisioner_extension.spec.ts
